--- a/Products1.Backend/Web.config
+++ b/Products1.Backend/Web.config
@@ -9,9 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" 
-         connectionString="Data Source=anubis.database.windows.net;Initial Catalog=afrodita;Persist Security Info=True;User=zulu;Password=Loky666*" 
-         providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Data Source=anubis.database.windows.net;Initial Catalog=afrodita;Persist Security Info=True;User=zulu;Password=Loky666*" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -21,7 +19,11 @@
   </appSettings>
   <system.web>
     <authentication mode="None" />
-    <compilation debug="true" targetFramework="4.5.2" />
+    <compilation debug="true" targetFramework="4.5.2">
+      <assemblies>
+        <add assembly="System.Net.Http.WebRequest, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+      </assemblies>
+    </compilation>
     <httpRuntime targetFramework="4.5.2" />
     <httpModules>
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" />
