--- a/Products1/Products1.iOS/Products1.iOS.csproj
+++ b/Products1/Products1.iOS/Products1.iOS.csproj
@@ -132,10 +132,16 @@
       <HintPath>..\..\packages\Xamarin.Forms.2.3.4.247\lib\Xamarin.iOS10\Xamarin.Forms.Xaml.dll</HintPath>
     </Reference>
     <Reference Include="Xamarin.iOS" />
+    <Reference Include="Plugin.Connectivity.Abstractions">
+      <HintPath>..\..\packages\Xam.Plugin.Connectivity.3.0.2\lib\Xamarin.iOS10\Plugin.Connectivity.Abstractions.dll</HintPath>
+    </Reference>
+    <Reference Include="Plugin.Connectivity">
+      <HintPath>..\..\packages\Xam.Plugin.Connectivity.3.0.2\lib\Xamarin.iOS10\Plugin.Connectivity.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Products1\Products1.csproj">
-      <Project>{e4e2aa5d-caad-454f-8589-5b897a2a4bed}</Project>
+      <Project>{2D64B9FD-0831-4E6E-9E63-8E74626DAD83}</Project>
       <Name>Products1</Name>
     </ProjectReference>
   </ItemGroup>
