--- a/Products1/Products1.iOS/Products1.iOS.csproj
+++ b/Products1/Products1.iOS/Products1.iOS.csproj
@@ -114,6 +114,7 @@
     <BundleResource Include="Resources\Icon-Small%402x.png" />
     <BundleResource Include="Resources\Icon-Small%403x.png" />
     <InterfaceDefinition Include="Resources\LaunchScreen.storyboard" />
+    <BundleResource Include="Resources\ic_chevron_right.png" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System" />
