New category begin

--- a/Products1/Products1.Android/Products1.Android.csproj
+++ b/Products1/Products1.Android/Products1.Android.csproj
@@ -121,6 +121,10 @@
     <AndroidResource Include="Resources\drawable-xhdpi\icon.png" />
     <AndroidResource Include="Resources\drawable-xxhdpi\icon.png" />
     <AndroidResource Include="Resources\drawable\ic_chevron_right.png" />
+    <AndroidResource Include="Resources\drawable\ic_add_circle.png" />
+    <AndroidResource Include="Resources\drawable-hdpi\ic_add_circle.png" />
+    <AndroidResource Include="Resources\drawable-xhdpi\ic_add_circle.png" />
+    <AndroidResource Include="Resources\drawable-xxhdpi\ic_add_circle.png" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Properties\AndroidManifest.xml" />
