--- a/Products1/Products1.iOS/Products1.iOS.csproj
+++ b/Products1/Products1.iOS/Products1.iOS.csproj
@@ -116,6 +116,7 @@
     <InterfaceDefinition Include="Resources\LaunchScreen.storyboard" />
     <BundleResource Include="Resources\ic_chevron_right.png" />
     <BundleResource Include="Resources\ic_add_circle.png" />
+    <BundleResource Include="Resources\ic_action_add_circle.png" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System" />
